Finish basic hacky impl of XML NS config loading with IMap
Includes also-hacky unit test to confirm functionality (used to get it working).